--- a/html/release.html
+++ b/html/release.html
@@ -9,29 +9,30 @@
 		</center>
 		<ul>
 			<li>
-				<b>Version Dev</b>
+				<b>Version 3.9.1 - CURRENT DEV</b>
 				<ul>
+          <li>Added Penalty Whiteboards and Coloured Tracker</li>
+        </ul>
+      </li>
+			<li>
+				<ul>
+				<b>Version 3.9.0</b>
 					<li>Added Star Pass functions to scoreboard controls.</li>
 					<li>Sync clocks to the running master clock (Period, Timeout, Intermission) rather than the system clock.</li>
 					<li>Initial Android Support (alpha) for scoreboard server.  Requires Android 4.0.3 or later.</li>
 					<li>Change Lead from Lead/No Lead to Lead/No Lead/Lost Lead and set Lost Lead automatically when lead jammer sent to the box.</li>
 					<li>Star Pass automatically sets Lost Lead if jammer was Lead.</li>
 					<li>Add Penalty Box controls to Jammer and Pivot on operator controls.</li>
-					<li>Implement Scoreboard view as a Websocket/JSON interface.</li>
 					<li>Penalty Tracker screen</li>
-					<li>New interactive overlay with stat screens</li>
-				</ul>
-			</li>
+					<li>Implement Scoreboard view as a Websocket/JSON interface.</li>
+        </ul>
+      </li>
 			<li>
-				<b>Version next</b>
 				<ul>
-					<li>Added DDU Top Overlay (Jared Quinn)</li>
-					<li>Updated WFTDA Style Overlays with team colors (Jon Fox)</li>
-				</ul>
-			</li>
-			<li>
 				<b>Version 3.2.3</b>
-				<ul>
+					<li>New interactive overlay with stat screens</li>
+					<li>Added DDTV Top Overlay (Jared Quinn)</li>
+					<li>Updated WFTDA Style Overlays with team colors (Jon Fox)</li>
 					<li>Fix undo controls from freezing system when the incorrect undo was performed.</li>
 					<li>Pause videos on switching views</li>
 				</ul>
