Removed link to old mailing list. Old information about graphics will be moved to the wiki.

--- a/html/guide.html
+++ b/html/guide.html
@@ -11,40 +11,7 @@
 </a>
 
 <h2>ScoreBoard Wiki</h2>
-<p>Documentation for the scoreboard has moved to a wiki.	Please
-<a href="https://github.com/rollerderby/scoreboard/wiki">
-visit the wiki</a> for all docs.
-</p>
-
-<h2>Contacts</h2>
-<p>For general usage questions there's the <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a>.
-</p>
-<p>To contact the developers and/or get news about development, 
-<a href="http://lists.sourceforge.net/lists/listinfo/derbyscoreboard-devel">join the mailing list</a>.
-You also can read the 
-<a href="http://sourceforge.net/mailarchive/forum.php?forum_name=derbyscoreboard-devel">mailing list archive</a>.
-</p>
-<p>If you find any bugs, please report them on the mailing list and/or 
-<a href="https://github.com/rollerderby/scoreboard/issues">open a bug</a>.
-If you would like to see any new features added, please send an email to the mailing list and/or 
-<a href="https://github.com/rollerderby/scoreboard/issues">open a feature request</a>.
-</p>
-
-<h2>Image Sizes</h2>
-<p>As a quick reference for the optimal sizes/aspects for each of the image types:
-<ul>
-	<li>Team Logo images should be 640x240, or aspect ratio 2.667:1</li>
-	<li>Fullscreen images should be 1600x1200, or aspect ratio 4:3
-		(the main scoreboard is fixed at 4:3 ratio and resizes to fit the browser window)
-	</li>
-	<li>Ad images should be 1600x320, or aspect ratio 5:1</li>
-</ul>
-Note that team logo and ad images do not have to be specifically these sizes, 
-but otherwise they will not completely fit into the space provided in the scoreboard display, 
-there will be some "blank" space above or beside them, depending on their specific aspect ratio.
-The fullscreen images are adjusted/stretched to fit across the entire 4:3 scoreboard.
-</p>
-
+<p>Documentation for the scoreboard has moved to a wiki. Please <a href="https://github.com/rollerderby/scoreboard/wiki"> visit the wiki</a> for all docs.</p>
 </body>
 
 </html>
