Improve Timeout and Clock handling: - Distinguish between Official Timeout and unspecified Timeout (declare OTO by re-pressing the "Timeout" button) - Go from timeout to lineup with the "Stop Jam/TO" button - Restore type of Timeout when returning to Timeout with "Un-*" button - Highlight the Team-T/O  resp. OR buttons when the respective type of timeout is active - Remove the Start, Stop, Set, and Reset buttons from the individual clocks as they should not normally be used.

--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -119,7 +119,7 @@
 				<button class="StartJam" data-role="button" data-icon="check" data-iconpos="right">Start Jam</button>
 			</div>
 			<div class="ui-block-b">
-				<button class="StopJam" data-role="button" data-icon="delete" data-iconpos="left">Stop Jam</button>
+				<button class="StopJam" data-role="button" data-icon="delete" data-iconpos="left">Stop Jam/TO</button>
 			</div>
 		</div>
 		<button class="Timeout" data-role="button">Timeout</button>
