Updated with more information.
Pointed users to README file as well as the GitHub page and Facebook group.

--- a/html/guide.html
+++ b/html/guide.html
@@ -11,7 +11,7 @@
 </a>
 
 <h2>ScoreBoard Wiki</h2>
-<p>Documentation for the scoreboard has moved to a wiki. Please <a href="https://github.com/rollerderby/scoreboard/wiki"> visit the wiki</a> for all docs.</p>
+<p>Documentation for the getting the scoreboard installed and started quickly is available in the included README file. To check for the latest release of this software, please visit the <a href="https://github.com/rollerderby/scoreboard">project home on GitHub</a> and visit the <a href="https://github.com/rollerderby/scoreboard/wiki">project wiki</a> for all docs. The Derby Scoreboard <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a> is very active and currently the best way to reach other users and developers.</p>
 </body>
 
 </html>
