Added files forgotten in previous commit

--- a/html/index.html
+++ b/html/index.html
@@ -198,7 +198,15 @@ function showOverlays() {
         <br/>
         <a href='views/overlays/wftda/wg_color.html'>WFTDA Style With Logo</a><br/>
         <a href='views/overlays/wftda/wg_color_nl.html'>WFTDA Style Without Logo</a><br/>
+        <br/>
+        <br/>
+        <br/>
 
+        <strong>WFTDA Style 16x9 With Jammer Names</strong>
+        <br/>
+        <a href='views/overlays/wftda/wg_color_jammer.html'>WFTDA Style With Jammer Names and Logo</a><br/>
+        <a href='views/overlays/wftda/wg_color_nl_jammer.html'>WFTDA Style With Jammer Names, Without Logo</a><br/>
+        <br/>
 
         <strong style="break-before: column;" >TCDG Video Feed </strong>
         <br/>
