fixes from code review
- make it clearer that "Official" button refers to an OTO instead of an OR
- remove, rather than comment out, ui & js call to penalty timing page in mobile screen (keep the html & js code around for now though)

--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -33,9 +33,6 @@
 			<li><a href="#JamControlPage">Jam Control</a></li>
 			<li><a href="#PeriodTimePage">Period Time</a></li>
 			<li><a href="#TeamScorePage">Team Score</a></li>
-<!-- hide link for next release, then work on using on-server clocks
-			<li><a href="#PenaltyPage">Penalty Timing</a></li>
--->
 		</ul>
 	</div>
 </div>
@@ -130,7 +127,7 @@
 				<span class="Team1 AlternateName"></span>
 				
 			</button></div>
-			<div class="ui-block-b"><button class="Official">Official</button></div>
+			<div class="ui-block-b"><button class="Official">TO Official</button></div>
 			<div class="ui-block-c"><button class="Team2">
 			TO 
 				<span class="Team2 Name">Team 2</span>
